tests/paczka1/fuzzy1/53804999.err
Error in line 2: DvCGNrC S823 83,0
Error in line 12: 2tto17uc S510 52,4
Error in line 8: CEY7g6c S823 88,3
Error in line 17: CEY7g6c A375 65,1
Error in line 23: 2tto17uc A375 16,5
Error in line 36: z4XQ3yX S5m0 72,m
